# SpeqNets

./: README.md
Alchemy/: local_2_10K.py  local_2_10K_connected.py  local_2_10K_connected_plus.py  local_2_10K_connected_plus_W.py  local_2_50K_connected_plus_W.py  local_3_10K_connected.py  local_3_10K_connected_plus.py
ZINC/: local_2_10K_connected_plus.py  local_2_50K.py  local_2_50K_connected_plus.py  local_2_FULL_connected_plus.py  local_3_10K_connected.py  local_3_10K_connected_plus.py
k_s_wl_cpp/: CMakeLists.txt  main.cpp
k_s_wl_cpp/datasets/PTC_FM/: PTC_FM_A.txt  PTC_FM_edge_labels.txt  PTC_FM_graph_indicator.txt  PTC_FM_node_labels.txt  README.txt
k_s_wl_cpp/implementation/tud_benchmark/: gnn  kernel  main_gnn.py  main_kernel.py
k_s_wl_cpp/implementation/tud_benchmark/kernel_baselines/: kernel_baselines.cpp
k_s_wl_cpp/implementation/tud_benchmark/kernel_baselines/src/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  ColorRefinementKernel.cpp  ColorRefinementKernel.h  GenerateThree.cpp  GenerateThree.h  GenerateTwo.cpp  GenerateTwo.h  Graph.cpp  Graph.h  GraphletKernel.cpp  GraphletKernel.h  ShortestPathKernel.cpp  ShortestPathKernel.h
k_s_wl_cpp/src/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  GenerateThree.cpp  GenerateThree.h  GenerateTwo.cpp  GenerateTwo.h  Graph.h
k_s_wl_cpp/svm/: svm.py
k_s_wl_cpp/tudataset-master/tud_benchmark/: main_kernel.py
k_s_wl_cpp/tudataset-master/tud_benchmark/kernel_baselines/: kernel_baselines.cpp
k_s_wl_cpp/tudataset-master/tud_benchmark/kernel_baselines/src/: AuxiliaryMethods.h
k_s_wl_simple/: aux.py  datasets.py  (+5 more)
(+102 files in other folders)
